Rewritten command system